# pivoteer

./: .gitignore  .mega-linter.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
docs/: overview.md
docs-legacy/: summary.md
docs/features/: dataframe-injection.md  pivot-cache-field-sync.md  pivot-refresh-on-open.md  table-range-resizing.md
docs/modules/: pivoteer-library.md
src/pivoteer/: __init__.py  core.py  models.py  pivot_cache_updater.py  table_resizer.py  template_engine.py  utils.py  xml_engine.py
tests/: conftest.py  generate_dummy_template.py  test_integration.py  test_pivot_cache_updater.py  test_pivot_logic.py  test_utils.py  test_xml_engine.py  verify_output.py
