[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "pivoteer"
version = "0.1.0"
description = "Inject pandas DataFrames into Excel templates with table resizing and pivot refresh."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
  { name = "Martin" }
]
dependencies = [
  "lxml>=5.2.0",
  "pandas>=2.2.0"
]

[project.optional-dependencies]
dev = [
  "xlsxwriter>=3.2.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/pivoteer"]

[tool.black]
line-length = 88
target-version = ["py310"]
