[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "pivoteer"
version = "0.2.2"
description = "Inject pandas DataFrames into Excel templates with table resizing and pivot refresh."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
license-files = ["LICENSE"]
authors = [
  { name = "Martin" }
]
maintainers = [
  { name = "Martin" }
]
dependencies = [
  "lxml>=5.2.0",
  "pandas>=2.2.0"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Office/Business",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Repository = "https://github.com/flitzrrr/pivoteer"
Issues = "https://github.com/flitzrrr/pivoteer/issues"

[project.optional-dependencies]
dev = [
  "xlsxwriter>=3.2.0",
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pivoteer"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "SIM",  # flake8-simplify
]
ignore = [
  "SIM117",  # nested with statements – clearer for zipfile read/write pairs
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]  # XML namespace strings in test fixtures are necessarily long

[tool.pytest.ini_options]
testpaths = ["tests"]

